--- a/Flight Reservation Glitches.ipynb
+++ b/Flight Reservation Glitches.ipynb
@@ -52,7 +52,7 @@
     "bobs_data.Date = pd.to_datetime(bobs_data.Date)\n",
     "\n",
     "# Separate the impact column into separate columns for impacts and delays, asuming delays are always listed first,\n",
-    "# that there are never incidents that result only in cancelations.\n",
+    "# that there are never incidents that result only in cancelations. Also, set any empty rows to 0.\n",
     "bobs_data['Delayed'] = bobs_data['People/Other Impact'].apply(\n",
     "        lambda x: int(str(x).split(',')[0].split()[0]) if not pd.isnull(x) else 0\n",
     "    )\n",
